--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 /**
- 
+ * =================================================================== 
+ *
+ *  Kards v1.0 Main Stylesheet
+ *  url: styleshout.com
+ *  03-01-2016
+ *  ------------------------------------------------------------------
  *  TOC:
  *  01. webfonts and iconfonts
  *  02. base style overrides
@@ -1097,7 +1102,25 @@ header .top-bar {
 	left: 90px;
 	top: 0;
 }
-
+header .logo {
+	float: left;
+	margin-left: 20px;
+	margin-right: 50px;
+	margin-top: 25px;
+	position: relative;
+}
+header .logo a {
+	display: block;
+	margin: 0;
+	padding: 0;
+	border: none;
+	font: 0/0 a;
+	text-shadow: none;
+	color: transparent;
+	width: 92px;
+	height: 15px;
+	background: url("../images/logo.png") no-repeat center;
+	background-size: 92px 15px;
 }
 
 /**
